--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     > 
-    <title>Galway News</title>
+    <title>Freecommerce</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
